--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700;800&display=swap');
+
+* {
+    font-family: 'Nunito Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+    height: 100%;
+}
+
+body {
+    background-color: #eeeeee;
+}
+
+.nm-shadow-up {
+    box-shadow:  3px 3px 5px #c1c1c1,
+                 -3px -3px 5px #ffffff;
+}
+
+.nm-shadow-down {
+    box-shadow: inset 3px 3px 5px #c1c1c1,
+            inset -3px -3px 5px #ffffff;
+}
+
+.nm-button:hover {
+    box-shadow: inset 3px 3px 5px #c1c1c1, inset -3px -3px 5px #ffffff;
+    transform: scale(0.98);
+}
+
+.main-content {
+    background-color: rgb(245, 245, 245);
+    box-shadow:  3px 3px 5px #c1c1c1,
+    -3px -3px 5px #ffffff;
+    height: 100vh;
+}
+
+.app-wrapper {
+   display: grid;
+   place-items: center;
+}
+
+#root {
+    background-color: #eee;
+}
+
+input {
+    background-color: #eee;
+    text-align: center;
+}
+
+.qr-contianer {
+    position: fixed;
+    background-color: #eee;
+    height: 100%;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.qr-back-btn {
+
+}
+
+.back-btn-container {
+    position: fixed;
+    height: 59vh;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: grid;
+    place-items: center;
 }
